# kvarter

./: .env.example  .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  package.json
analytics/: Dockerfile  pyproject.toml
analytics/src/analytics/: __init__.py
analytics/src/analytics/model/: __init__.py  coefficients.py  hedonic.py
analytics/src/analytics/pipeline/: runner.py
analytics/src/analytics/sources/: base.py  lantmateriet.py  scb.py
analytics/tests/: test_coefficients.py  test_hedonic.py  test_pipeline.py  test_scb.py
data/: coefficients.json
scraper/: Dockerfile  package.json  scraper-server.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/actions/: analytics.ts  search.ts  sold.ts
src/app/compare/: page.tsx
src/app/sold/: page.tsx
src/components/analytics/: confidence-badge.tsx  model-stats.tsx  price-decomposition.tsx
src/components/compare/: comparison-table.tsx  radar-chart.tsx
src/components/layout/: footer.tsx  header.tsx
src/components/loading/: card-skeleton.tsx  map-skeleton.tsx  search-skeleton.tsx
src/components/map/: map-container.tsx
src/components/search/: filter-panel.tsx  no-results.tsx  property-card.tsx  property-list.tsx  property-row.tsx  results-toggle.tsx  search-bar.tsx  search-results.tsx
src/components/sold/: sold-row.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  (+1 more)
src/lib/: constants.ts  env.ts  filters.ts  normalize.ts  utils.ts
src/types/: common.ts  index.ts  location.ts  property.ts  search.ts  sold.ts
(+55 files in other folders)
